# Prog2

./: CMakeLists.txt  Prog2.rar  ex01  ex01.c  ex02  ex02.c  teste.c  teste.txt
Lista_10/: Lista10.Exercicio1.c  Lista10.Exercicio2.c  Lista10.Exercicio3.c  Lista10.Exercicio4.c  Lista10.Exercicio5.c  Lista10.Exercicio6.c  Lista10.Exercicio7.c  Lista10.Exercicio8.c  teste.c
Lista_11/: Lista11.Exercicio1.c  Lista11.Exercicio2.c  Lista11.Exercicio3.c  Lista11.Exercicio3.txt
Lista_12/: Lista12.Exercicio1.c  Lista12.Exercicio2.c  Lista12.Exercicio4.c
Lista_7/: Lista7.Exercicio1.c  Lista7.Exercicio2.c  Lista7.Exercicio3.c  Lista7.Exercicio4.c  Lista7.Exercicio5.c  Lista7.Exercicio6.c  saida.txt
Lista_8/: Lista8.Exercicio1.c  Lista8.Exercicio2.c  Lista8.Exercicio3.c  Lista8.Exercicio4.c  Lista8.Exercicio5.c  Lista8.Exercicio6.c  Lista8.Exercicio7.c  Lista8.Exercicio8.c
Lista_9/: Lista9.Exercicio1.c  Lista9.Exercicio10.c  Lista9.Exercicio11.c  Lista9.Exercicio12.c  Lista9.Exercicio2.c  Lista9.Exercicio3.c  Lista9.Exercicio4.c  Lista9.Exercicio5.c  Lista9.Exercicio6.c  Lista9.Exercicio7.c  Lista9.Exercicio9.c
avaliacao/: Avaliação4.SeuNome.rar  Lista10.Exercicio1.c  Lista10.Exercicio4.c  Lista10.Exercicio5.c  Lista10.Exercicio6.c  Lista10.Exercicio7.c  Lista10.Exercicio8.c  Lista11.Exercicio2.c  Lista11.Exercicio3.c  Lista12.Exercicio1.c  Lista12.Exercicio2.c  Lista12.Exercicio3.txt  Lista12.Exercicio4.c
lista_1/: Lista1.Exercicio1.c  Lista1.Exercicio2.c  Lista1.Exercicio3.c  Lista1.Exercicio4.c  Lista1.Exercicio5.c  Lista1.Exercicio6.c  Lista1.Exercicio7.c  Lista1.Exercicio8.c  ex01  ex01.c  ex02  ex03  ex03.c  ex04  ex04.c  ex05  ex06  ex07  ex07.c  ex08  ex08.c
lista_2/: Lista2.Exercicio1.c  Lista2.Exercicio10.c  Lista2.Exercicio11.c  Lista2.Exercicio2.c  Lista2.Exercicio3.c  Lista2.Exercicio4.c  Lista2.Exercicio5.c  Lista2.Exercicio6.c  Lista2.Exercicio7.c  Lista2.Exercicio8.c  Lista2.Exercicio9.c  ex01  ex01.c  ex02  ex03  ex04.c  ex07.c  ex08.c  ex09.c  ex10.c  ex11.c
lista_3/: Lista3.Exercicio1.c  Lista3.Exercicio10.c  Lista3.Exercicio11.c  Lista3.Exercicio12.c  Lista3.Exercicio14.c  Lista3.Exercicio2.c  Lista3.Exercicio3.c  Lista3.Exercicio4.c  Lista3.Exercicio5.c  Lista3.Exercicio6.c  Lista3.Exercicio7.c  Lista3.Exercicio8.c  Lista3.Exercicio9.c  ex01.c  ex02.c  ex03.c  ex04.c  ex05.c  ex07.c  ex08.c  ex09.c  ex10.c  ex14.c
lista_4/: Lista4.Exercicio1.c  Lista4.Exercicio10.c  Lista4.Exercicio11.c  Lista4.Exercicio12.c  Lista4.Exercicio13.c  Lista4.Exercicio2.c  Lista4.Exercicio3.c  Lista4.Exercicio4.c  Lista4.Exercicio5.c  Lista4.Exercicio6.c  Lista4.Exercicio7.c  Lista4.Exercicio8.c  Lista4.Exercicio9.c  ex01.c
lista_5/: Lista5.Exercicio1.c  Lista5.Exercicio10.c  Lista5.Exercicio11.c  Lista5.Exercicio12.c  Lista5.Exercicio13.c  Lista5.Exercicio2.c  Lista5.Exercicio3.c  Lista5.Exercicio4.c  Lista5.Exercicio5.c  Lista5.Exercicio7.c  Lista5.Exercicio8.c  Lista5.Exercicio9.c
lista_6/: L6-ex6.c  Lista6.Exercicio1.c  (+7 more)
(+1 files in other folders)
