cmake_minimum_required(VERSION 3.17)
project(Prog2 C)

set(CMAKE_C_STANDARD 99)

add_executable(Prog2 main.c)
add_executable(lista_2_ex08 lista_2/ex08.c)
add_executable(ex07 lista_2/ex07.c)
add_executable(ex08 lista_2/ex08.c)
add_executable(ex09 lista_2/ex09.c)
add_executable(ex10 lista_2/ex10.c)
add_executable(ex11 lista_2/ex11.c)