cmake_minimum_required(VERSION 3.17)
project(Prog2 C)

set(CMAKE_C_STANDARD 99)

add_executable(Prog2 main.c)
add_executable(lista_2_ex08 lista_2/ex08.c)
add_executable(ex07 lista_3/ex07.c)
add_executable(ex08 lista_3/ex08.c)
add_executable(ex09 lista_3/ex09.c)
add_executable(ex10 lista_2/ex10.c)
add_executable(ex11 lista_2/ex11.c)
add_executable(ex04 lista_3/ex04.c)
add_executable(teste teste.c)
add_executable(ex01 lista_3/ex01.c)
add_executable(ex02 lista_3/ex02.c)
add_executable(ex03 lista_3/ex03.c)

add_executable(ex05 lista_3/ex05.c)
add_executable(ex06 lista_3/ex06.c)
