add_executable(Lista4.Exercicio1 lista_4/Lista4.Exercicio1.c)

add_executable(Lista6.Exercicio1 lista_6/Lista6.Exercicio1.c)
add_executable(Lista4.Exercicio2 lista_4/Lista4.Exercicio2.c)
add_executable(Lista4.Exercicio11 lista_4/Lista4.Exercicio11.c)
add_executable(Lista4.Exercicio3 lista_4/Lista4.Exercicio3.c)
add_executable(Lista4.Exercicio4 lista_4/Lista4.Exercicio4.c)
add_executable(Lista4.Exercicio5 lista_4/Lista4.Exercicio5.c)
add_executable(Lista4.Exercicio8 lista_4/Lista4.Exercicio8.c)
add_executable(teste teste.c)
add_executable(Lista6.Exercicio6 lista_6/Lista6.Exercicio6.c)
add_executable(Lista6.Exercicio2 lista_6/Lista6.Exercicio2.c)
add_executable(Lista4.Exercicio7 lista_4/Lista4.Exercicio7.c)
add_executable(Lista4.Exercicio9 lista_4/Lista4.Exercicio9.c)
add_executable(Lista4.Exercicio10 lista_4/Lista4.Exercicio10.c)
add_executable(Lista5.Exercicio13 lista_5/Lista5.Exercicio13.c)
add_executable(Lista5.Exercicio9 lista_5/Lista5.Exercicio9.c)
add_executable(Lista5.Exercicio5 lista_5/Lista5.Exercicio5.c)
add_executable(Lista5.Exercicio1 lista_5/Lista5.Exercicio1.c)
add_executable(Lista5.Exercicio3 lista_5/Lista5.Exercicio3.c)
add_executable(Lista5.Exercicio2 lista_5/Lista5.Exercicio2.c)
add_executable(Lista4.Exercicio12 lista_4/Lista4.Exercicio12.c)
add_executable(Lista5.Exercicio4 lista_5/Lista5.Exercicio4.c)
add_executable(Lista5.Exercicio7 lista_5/Lista5.Exercicio7.c)
add_executable(Lista5.Exercicio8 lista_5/Lista5.Exercicio8.c)
add_executable(Lista6.Exercicio3 lista_6/Lista6.Exercicio3.c)
add_executable(Lista4.Exercicio6 lista_4/Lista4.Exercicio6.c)
add_executable(Lista6.Exercicio7 lista_6/Lista6.Exercicio7.c)
add_executable(Lista6.Exercicio8 lista_6/Lista6.Exercicio8.c)
add_executable(Lista3.Exercicio14 lista_3/Lista3.Exercicio14.c)
add_executable(Lista5.Exercicio10 lista_5/Lista5.Exercicio10.c)
add_executable(Lista5.Exercicio12 lista_5/Lista5.Exercicio12.c)